commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -873,11 +873,12 @@ function openOnce(url, target, file){
     // if the "target" window was just opened, change its url
     if(ICEcoderWin.location.href === 'about:blank'){
         ICEcoderWin.location.href = url;
-		// test go to line 3
-		//window.top.ICEcoder.goToLine(3);
     }
 	
 	ICEcoderWin.open_editor_path(file);
+	// test go to line 3
+	//window.top.ICEcoder.goToLine(3);
+	//ICEcoderWin.goToLine(3);
     return ICEcoderWin;
 	//return false;
 }
@@ -1288,7 +1289,7 @@ $githuburl="https://github.com/mlerman/WIN10LAP/tree/master".$display_link;
 
 <fieldset style="float: left;">
 <legend>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.previous&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>" ><img src="/doc/images/notepad-plus-plus.gif"/></a>
-        <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.previous");  return false;'><img src="/doc/images/text.png"/></a>
+        <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.previous");  return false;'><img src="/doc/images/text.png"/></a>
               <a href="/jquery-fileTree/pickrelated.php?parent=<?php echo $display_link;?>&close=closePagePrevious" target="pickf" onclick="javascript:void window.open('/jquery-fileTree/pickrelated.php?parent=<?php echo $display_link;?>&close=closePagePrevious','1481656702602','width=550,height=750,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=100,top=50');return false;"><img src="/doc/images/add_file.png"/></a>
         &nbsp;<img src="/doc/images/Arrowprevious48.png"/> 
 </legend>
@@ -1296,7 +1297,7 @@ $githuburl="https://github.com/mlerman/WIN10LAP/tree/master".$display_link;
 </fieldset>
 <fieldset>
 <legend>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.next&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif"/></a>
-        <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.next");  return false;'><img src="/doc/images/text.png"/></a>
+        <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.next");  return false;'><img src="/doc/images/text.png"/></a>
               <a href="/jquery-fileTree/pickrelated.php?parent=<?php echo $display_link;?>&close=closePageNext" target="pickf" onclick="javascript:void window.open('/jquery-fileTree/pickrelated.php?parent=<?php echo $display_link;?>&close=closePageNext','1481656702602','width=550,height=750,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=100,top=50');return false;"><img src="/doc/images/add_file.png"/></a>
         &nbsp;<img src="/doc/images/Arrownext48.png"/> 
 </legend>
@@ -1389,7 +1390,7 @@ if($param1!="") echo ";";
 
 <fieldset style="float: left;">
 <legend>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.related&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif"/></a>
-    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.related");  return false;'><img src="/doc/images/text.png"/></a>
+    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.related");  return false;'><img src="/doc/images/text.png"/></a>
               <a href="/jquery-fileTree/pickrelated.php?parent=<?php echo $display_link;?>&close=closePage" target="pickf" onclick="javascript:void window.open('/jquery-fileTree/pickrelated.php?parent=<?php echo $display_link;?>&close=closePage','1481656702602','width=550,height=750,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=100,top=50');return false;"><img src="/doc/images/add_file.png"/></a>
         &nbsp;<small>(.related)</small> Related: 
 </legend>
@@ -1408,7 +1409,7 @@ if ($no_favicon)     echo "&nbsp;<a href=\"https://www.google.com/search?q=".$pr
 
 <fieldset>
 <legend>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.head&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif"/></a> 
-        <a href="/doc/files/common/do.php?&targetdir=<?php echo realpath($dir); ?>&targetfile=.head" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.head");  return true;'><img src="/doc/images/text.png"/></a>
+        <a href="/doc/files/common/do.php?&targetdir=<?php echo realpath($dir); ?>&targetfile=.head" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.head");  return true;'><img src="/doc/images/text.png"/></a>
 		&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.head&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>&before=addhr"><img src="/doc/images/embedicon.png"/></a> 
               <small>(.head)</small> Notes: 
 </legend>
@@ -1552,7 +1553,7 @@ function psexec(phpfile) {
   <tr>
     <td><hr /></td>
     <td style="width:1px; padding: 0 10px; white-space: nowrap;"><a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=specific-here.inc&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif"/></a>
-    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>specific-here.inc");  return false;'><img src="/doc/images/text.png"/></a>
+    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>specific-here.inc");  return false;'><img src="/doc/images/text.png"/></a>
 	&nbsp;<strong>Saved commands specific to this &#34;<script>document.write("<?php echo $prjname; ?>");</script>&#34; project </strong><small>(stored in web page, see specific-here.inc, runs on Windows server)</small></td>
     <td><hr /></td>
   </tr>
@@ -1586,7 +1587,7 @@ fclose($handle);
   <tr>
     <td><hr /></td>
     <td style="width:1px; padding: 0 10px; white-space: nowrap;"><a href="#view"><span><img src="/doc/images/eye.gif"></span></a>&nbsp;<img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload" /></span>&nbsp;<strong>Frequent Edit</strong>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.recentedit&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif" title="Edit this section"/></a>
-	    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.recentedit");  return false;'><img src="/doc/images/text.png"/></a>
+	    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.recentedit");  return false;'><img src="/doc/images/text.png"/></a>
 	&nbsp;<a href="/doc/files/common/jquery-fileTree/pickrecentedit.php?drive=c&parent=<?php echo $display_link;?>&headpath=:/UniServer/www/doc/files" target="pickf" onclick="javascript:void window.open('/doc/files/common/jquery-fileTree/pickrecentedit.php?drive=c&parent=<?php echo $display_link;?>&headpath=:/UniServer/www/doc/files','1481656702602','width=550,height=750,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=100,top=50');return false;"><img src="/doc/images/add_file.png" title="C:\"/></a>
 	<!--
 	&nbsp;&nbsp;<a href="/jquery-fileTree/pickrecentedit.php?drive=//&parent=<?php echo $display_link;?>&headpath=mlerman-vm-mint/lfiles" target="pickf"><img src="/doc/images/add_file.png" title="M:\"/></a> 
@@ -1853,7 +1854,7 @@ if ($handle = opendir($dir)) {
 						echo '<a class="winlink" href="/doc/files/common/downloadfile.php?fname='.$file.'&targetdir='.realpath($dir).'&admin='.$admin.'" onclick="this.href=this.href+\'&param1=\'+document.getElementById(\'cmdinput\').value;"   >'.$file.'</a>'
 						// edit icon:
 							.' <a class="winlink" href="/doc/files/common/downloadfile.php?fname=ui_edit_this.run&targetdir='.realpath($dir).'&targetfile='.$file.'&perma='.realpath($dirperma).'"><img src="/doc/images/notepad-plus-plus.gif"/></a>'
-							.'<a href="#" onclick=\'openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "'.$urldir.$file.'");  return false;\'><img src="/doc/images/text.png"/></a>'
+							.'<a href="#" onclick=\'openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "'.$urldir.$file.'");  return false;\'><img src="/doc/images/text.png"/></a>'
 							
 						// view icon xxx                                                                                                                 // window.open replace with alert to test
 							.'<a id="view'.$i.'" class="inline" href="/viewfile/viewdos.php?fname='.$file.'&targetdir='.$dir.'" onclick="javascript:void window.open(\'/viewfile/viewdos.php?fname='.$file.'&targetdir='.$dir.'\',\'1481602525735\',\'width=980,height=550,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=150,top=50\'); return false;"><img src="/doc/images/view.png" '.$onmouseover_view.' /></a>'
@@ -1919,7 +1920,7 @@ if ($handle = opendir($dir)) {
 						} else {
 							$str_edit = ' <a class="winlink" href="/doc/files/common/downloadfile.php?fname=ui_edit_this.run&targetdir='.realpath($dir).'&targetfile='.$file.'&perma='.realpath("perma").'"><img src="/doc/images/notepad-plus-plus.gif"/></a>';
 						}
-						$str_edit.='<a href="#" onclick=\'openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "'.$urldir.$file.'");  return false;\'><img src="/doc/images/text.png"/></a>';
+						$str_edit.='<a href="#" onclick=\'openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "'.$urldir.$file.'");  return false;\'><img src="/doc/images/text.png"/></a>';
 					if (file_exists ( $dir.'/.'.$file )) {	// prevent error messages in console 404 not found
 							$onmouseover='onmouseover="getFileFromServer('.'\'.'.$file.'\''.', function(text){ show(text, this, '.$i.', \'lbulle\')});"';
 					} else {
@@ -2060,7 +2061,7 @@ echo "<hr/>\n";
   <tr>
     <td><hr /></td>
     <td style="width:1px; padding: 0 10px; white-space: nowrap;"><img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload" />&nbsp;<strong>Drag and drop url links in the box below</strong>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.links&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif" title="Edit this section"/></a>
-    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.links");  return false;'><img src="/doc/images/text.png"/></a>
+    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.links");  return false;'><img src="/doc/images/text.png"/></a>
 	
 	</td>
     <td><hr /></td>
@@ -2079,7 +2080,7 @@ echo "<hr/>\n";
   <tr>
     <td><hr /></td>
     <td style="width:1px; padding: 0 10px; white-space: nowrap;"><img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload" />&nbsp;<strong>Make a sound alert when the following file changes</strong>&nbsp;<a href="/doc/files/common/downloadfile.php?fname=<?php if($CurrOS!='Linux') echo 'ui_';?>edit_this.<?php if($CurrOS!='Linux') echo 'run'; else echo 'rn'?>&targetdir=<?php echo realpath($dir); ?>&targetfile=.sound&perma=<?php if($CurrOS!='Linux') echo realpath('perma'); else echo realpath('permalinux'); ?>"><img src="/doc/images/notepad-plus-plus.gif" title="Edit this section"/></a>
-    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "<?php echo $urldir; ?>.sound");  return false;'><img src="/doc/images/text.png"/></a>
+    <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "<?php echo $urldir; ?>.sound");  return false;'><img src="/doc/images/text.png"/></a>
 	</td>
     <td><hr /></td>
   </tr>
@@ -2869,14 +2870,14 @@ echo("</script>\n");
 
 
 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/permalinux/mntFiles.rn");  return false;'><img src="/doc/images/text.png" title="mntFiles.rn"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/open-command-prompt-here.html");  return false;'><img src="/doc/images/text.png" title="open-command-prompt-here.html"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/downloadfile.php");  return false;'><img src="/doc/images/text.png" title="downloadfile.php"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/instantedithead.js");  return false;'><img src="/doc/images/text.png" title="instantedithead.js"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/updatehead.php");  return false;'><img src="/doc/images/text.png" title="updatehead.php"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/viewfile/viewdos.php");  return false;'><img src="/doc/images/text.png" title="viewdos.php"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/write_ckfile.php");  return false;'><img src="/doc/images/text.png" title="write_ckfile.php"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/psexec.php");  return false;'><img src="/doc/images/text.png" title="psexec.php"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/permalinux/mntFiles.rn");  return false;'><img src="/doc/images/text.png" title="mntFiles.rn"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/open-command-prompt-here.html");  return false;'><img src="/doc/images/text.png" title="open-command-prompt-here.html"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/downloadfile.php");  return false;'><img src="/doc/images/text.png" title="downloadfile.php"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/instantedithead.js");  return false;'><img src="/doc/images/text.png" title="instantedithead.js"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/updatehead.php");  return false;'><img src="/doc/images/text.png" title="updatehead.php"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/viewfile/viewdos.php");  return false;'><img src="/doc/images/text.png" title="viewdos.php"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/write_ckfile.php");  return false;'><img src="/doc/images/text.png" title="write_ckfile.php"/></a>&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor", "/doc/files/common/psexec.php");  return false;'><img src="/doc/images/text.png" title="psexec.php"/></a>&nbsp; 
 <iframe id="other" src="/doc/files/common/othersites.php?urldir=<?php echo $urldir; ?>" />
 <br/><br/><br/>
 
