commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2965,7 +2965,7 @@ function openOnceTest(url, target, file){
 	//ICEcoderWin.goToLine(3);
     return ICEcoderWin;
 }
-
+// ICECODER_TESTING
 </script>
 
 	<a nohref="" onclick='openOnceTest("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor","/doc/files/common/ui_test.run");' style="cursor: pointer">openOnceTest()</a><br/>
