commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -1627,7 +1627,7 @@ fclose($handle);
 	<!--
 	&nbsp;&nbsp;<a href="/jquery-fileTree/pickrecentedit.php?drive=//&parent=<?php echo $display_link;?>&headpath=mlerman-vm-mint/lfiles" target="pickf"><img src="/doc/images/add_file.png" title="M:\"/></a> 
 	-->
-	<small>(.recentedit)</small>&nbsp;
+	<small>Search string or line number:</small>&nbsp;<input size="6" id="inpg"/>
 	</td>
     <td><hr /></td>
   </tr>
@@ -2014,7 +2014,7 @@ if ($handle = opendir($dir)) {
 <table width="100%">
   <tr>
     <td><hr /></td>
-    <td style="width:1px; padding: 0 10px; white-space: nowrap;"><a href="#view"><span><img src="/doc/images/eye.gif"></a>&nbsp;<img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload"  />&nbsp;<strong>Perma batch </strong><small>(download and run local)</small>&nbsp;<input size="6" id="inpf"/></td>
+    <td style="width:1px; padding: 0 10px; white-space: nowrap;"><a href="#view"><span><img src="/doc/images/eye.gif"></a>&nbsp;<img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload"  />&nbsp;<strong>Perma batch </strong><small>PARAM1:</small>&nbsp;<input size="6" id="inpf"/></td>
     <td><hr /></td>
   </tr>
 </table>
