--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -195,7 +195,8 @@ if (file_exists ( $dir.'/get_feu.bat' ))
 <script src="/doc/files/common/jquery.min.js"></script>
 <script type="text/javascript" src="/doc/files/common/tipped/tipped.js"></script>
 <link rel="stylesheet" type="text/css" href="/doc/files/common/tipped/tipped.css" />
-<script src="/doc/files/common/zeroclipboard-2.2.0/dist/ZeroClipboard.js"></script>
+<!-- <script src="/doc/files/common/zeroclipboard-2.2.0/dist/ZeroClipboard.js"></script>  to be removed -->
+<script src="/doc/files/common/clipboard.js/dist/clipboard.min.js"></script>
 
 
 
@@ -1154,6 +1155,17 @@ var admin_array_added = false;
 		echo "]\n";
 	}
  ?>;
+ 
+ 
+function bindme(id) {
+    //alert('bindme'+' id is '+id);
+    var clipboard = new ClipboardJS('#'+id, { text: function() { return document.getElementById(id).getAttribute('data-clipboard-text');  } });
+    
+    setTimeout(function(){ console.log("copied in clipboard")},1000);
+    document.getElementById(id).style.backgroundColor = 'lightgray';
+
+}
+ 
 
 function customAlertRight(msg,duration, right, top)		// http://mlerman-lap/s/W
 {
@@ -1168,17 +1180,17 @@ function customAlertRight(msg,duration, right, top)		// http://mlerman-lap/s/W
  },duration);
  document.body.appendChild(styler);
 
-
+// MIKHAELL_TEST_CLIPBOARD
  if (!admin_array_added)
  {
    for(ii=0; ii<arr_admin.length; ii++)
    {
-     document.getElementById('customdivright').innerHTML +="<br/>&nbsp;<span id='copy_button_admin_"+ii+"' data-clipboard-text='"+arr_admin[ii][0]+"' title='copy to clipboard'  onmouseover='this.style.backgroundColor=white' onclick='setTimeout(function(){ console.log(\"copied\")},1000);'><img src=\"/doc/images/copyclip.png\"/>&nbsp;"+arr_admin[ii][1]+"</span>";
+     document.getElementById('customdivright').innerHTML +="<br/>&nbsp;<span id='copy_button_admin_"+ii+"' data-clipboard-text='"+arr_admin[ii][0]+"' title='copy to clipboard' style='cursor:pointer'  onmouseover='this.style.backgroundColor=white' onclick='bindme(this.id);'><img src=\"/doc/images/copyclip.png\"/>&nbsp;"+arr_admin[ii][1]+"</span>";
    }
    admin_array_added=true;
  }
 
-  
+/*  
 //var client10 = new ZeroClipboard( document.getElementById("copy-button-10") );	// n'existe pas encore
 //client10.on( "ready", function( readyEvent ) { document.getElementById("copy-button-10").style.backgroundColor = 'white'; client10.on( "aftercopy", function( event ) { document.getElementById("copy-button-10").style.backgroundColor = 'lightgray'; } ); } );
 
@@ -1189,7 +1201,7 @@ arr_admin.forEach(function(arritem, arrindex) {
   client_admin_[arrindex].on( "aftercopy", function( event ) { document.getElementById("copy_button_admin_"+arrindex).style.backgroundColor = 'lightgray'; 
                                                              } ); } );
 });
-
+*/
   
 }
 /*
